<resources>
    <string name="app_name">DibApp</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="authentication_failed">The email or password is incorrect</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="comments">Comments</string>
    <string name="lezione" translatable="false">ProvaLezione</string>
    <string name="provalezione" translatable="false">Prova Lezione</string>
    <string name="noLessonsToday">No planned lessons for today</string>
    <string name="noLessonsOnSelectedDate">No lessons on selected date</string>
    <string name="string_logout" translatable="false">Logout</string>
    <string name="calendar">Calendar</string>
    <string name="lessons">Lessons</string>
    <string name="settings">Settings</string>
    <string name="today_lessons">Lessons of the day</string>
    <string name="lesson_detail">Lesson detail</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="today_argument">Argument of the day</string>
    <string name="lesson_not_started">Lesson is not started</string>
    <string name="registration_stopped">Registration stopped</string>
    <string name="open_registration">Open registration</string>
    <string name="stop_registration">Stop registration</string>
    <string name="evaluate_lesson">Evaluate the lesson</string>
    <string name="evaluate">Evaluate</string>
    <string name="insert_comment">Insert comment</string>
    <string name="insert_argument">Insert argument</string>
    <string name="account" translatable="false">Account</string>
    <string name="communicate" translatable="false">Communicate</string>
    <string name="full_name">Full name</string>
    <string name="username" translatable="false">Username</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="registration_number">Registration number</string>
    <string name="notifications">Notifications</string>
    <string name="activate_push_notifications">Activate push notifications</string>
    <string name="disactivate_push_notifications">Disactivate push notifications</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="logout_alert_string">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="visibility_on">Public</string>
    <string name="visibility_off">Private</string>
    <string name="activate_lesson">Activate lesson</string>
    <string name="register">Register</string>
    <string name="registration_done">Registration done</string>
</resources>
