<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:id="@+id/not_pref"
        android:defaultValue="true"
        android:key="key1"
        android:summaryOff="@string/activate_push_notifications"
        android:summaryOn="@string/disactivate_push_notifications"
        android:theme="@style/AppTheme"
        android:title="@string/notifications" />

<!--        <EditTextPreference-->
<!--            android:key="key2"-->
<!--            android:title="EditText Preference"-->
<!--            android:summary="EditText Summary"-->
<!--            android:dialogMessage="Dialog Message"-->
<!--            android:defaultValue="Default value" />-->

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="key3"
        android:theme="@style/AppTheme"
        android:title="@string/previous_years_lessons" />


</PreferenceScreen>